// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown/presenters/InputPresenter renders with all props (that dropdown uses) 1`] = `
<div
  className="hig__dropdown__input-wrapper"
>
  <div
    className="hig__text-field-v1 hig__text-field-v1--button hig__text-field-v1--required hig__text-field-v1--disabled"
  >
    <div
      className="hig__text-field-v1__content"
    >
      <div
        className="hig__text-field-v1__input-wrapper hig__text-field-v1__input-wrapper--disabled"
      >
        <span
          className="hig__text-field-v1__label-spacer"
        />
        <label
          className="hig__text-field-v1__label hig__text-field-v1__label--required hig__text-field-v1__label--with-value"
          htmlFor="id"
        >
          label
        </label>
        <div
          className="hig__text-field-v1__input-row"
        >
          <input
            className="hig__text-field-v1__input"
            disabled={true}
            id="id"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            readOnly={true}
            type="button"
            value="the selected item's value"
          />
        </div>
      </div>
      <p
        className="hig__text-field-v1__instructions"
      >
        instructions
      </p>
      <p
        className="hig__text-field-v1__required-notice"
      >
        this is required
      </p>
    </div>
  </div>
  <span
    className="hig__dropdown__input-caret"
  >
    <div
      className="hig__icon hig__icon--24-size"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
        }
      }
    />
  </span>
</div>
`;

exports[`Dropdown/presenters/InputPresenter renders without props 1`] = `
<div
  className="hig__dropdown__input-wrapper"
>
  <div
    className="hig__text-field-v1 hig__text-field-v1--button"
  >
    <div
      className="hig__text-field-v1__content"
    >
      <div
        className="hig__text-field-v1__input-wrapper"
      >
        <div
          className="hig__text-field-v1__input-row"
        >
          <input
            className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
            id="text-field-1"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="button"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <span
    className="hig__dropdown__input-caret"
  >
    <div
      className="hig__icon hig__icon--24-size"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
        }
      }
    />
  </span>
</div>
`;
